fix padding issue on narrow screens

--- a/apps/ucp-ui/src/Performance/AggregatorInsights/ByJobType/sharedComponents.module.css
+++ b/apps/ucp-ui/src/Performance/AggregatorInsights/ByJobType/sharedComponents.module.css
@@ -9,6 +9,7 @@
 }
 
 .paddingCell {
+  min-width: 16px;
   width: 16px;
 }
 
